# truckin-through-time

./: .gitignore  Makefile  README.md  database.db  pyproject.toml
scraper/: cli.py  crud.py  llm.py  logger.py  models.py  prompts.py  schema.py  scraper.py
